MRK-11888 correct margin spacing on homepage

--- a/source/styles/components/beta.css
+++ b/source/styles/components/beta.css
@@ -27,6 +27,10 @@
       display: flex;
       width: 100%;
     }
+
+    .BetaSect-footer {
+      margin-top: -40em;
+    }
     
     .BetaSect--left {
       margin-left: 4em;
